experimented with a first real alternative to panel: Dash

--- a/ToDo
+++ b/ToDo
@@ -1,6 +1,7 @@
 To Do:
 - REFACTOR
 - Automatically update the panel dashboard (new data every hour)
+- In order to make it available more easily, create a dash app
 
 
 Done:
